--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -36,6 +36,31 @@ header p {
     column-gap: 20px;
     border-radius: 15%;
 }
+@media screen and (max-width: 850px) {
+    .signup {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .signup img {
+       height: 400px !important;
+       width: 100% !important;
+       margin-bottom: 5%;
+       margin-left: 0 !important;
+    }
+    form {
+        height: 400px;
+        width: 90%;
+        margin-right: 0!important;
+    }
+    .pitch {
+        font-size: 1.3em!important;
+    }
+    .benefit p{
+        font-size: 1em!important;
+    }
+
+}
 .signup img {
     display: flex;
     align-items: center;
