--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -36,34 +36,6 @@ header p {
     column-gap: 20px;
     border-radius: 15%;
 }
-@media screen and (max-width: 850px) {
-    header p {
-        font-size: 1.7em !important;
-    }
-    .signup {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .signup img {
-       height: 400px !important;
-       width: 100% !important;
-       margin-bottom: 5%;
-       margin-left: 0 !important;
-    }
-    form {
-        height: 400px;
-        width: 90%;
-        margin-right: 0!important;
-    }
-    .pitch {
-        font-size: 1em!important;
-    }
-    .benefit p{
-        font-size: 1em!important;
-    }
-
-}
 .signup img {
     display: flex;
     align-items: center;
@@ -209,4 +181,35 @@ footer p {
 }
 strong {
     font-weight: bold;
+}
+@media screen and (max-width: 850px) {
+    header p {
+        font-size: 1.7em !important;
+    }
+    .signup {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .signup img {
+       height: 400px !important;
+       width: 100% !important;
+       margin-bottom: 5%;
+       margin-left: 0 !important;
+    }
+    form {
+        height: 400px;
+        width: 90%;
+        margin-right: 0!important;
+    }
+    .pitch {
+        font-size: 1em!important;
+    }
+    .benefit p{
+        font-size: 1em!important;
+    }
+    #fname, #lname, #email {
+        width: 60%!important;
+    }
+
 }
