--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -67,6 +67,7 @@ legend {
     text-align: center;
     border: 3px solid rgb(95, 64, 29);
     border-radius: 5px;
+    margin-bottom: 3%;
 }
 button {
     width: 30%;
@@ -76,6 +77,7 @@ button {
     border: 2px solid;
     font-size: 1.1em;
     font-family: 'Courgette', cursive;
+    margin-top: 5%;
 }
 .greeting {
     display: flex;
